==== LimeChat 0.16.1 ====

2008-02-09  Satoshi Nakagawa <artension@gmail.com>

	Changed to take care of +q/+a user modes and '~'/'&' prefixes.

2008-02-09  Satoshi Nakagawa <artension@gmail.com>

	Added an option, don't show notifications when the application is active.

2008-02-09  Satoshi Nakagawa <artension@gmail.com>

	Added /query support.

2008-02-05  Satoshi Nakagawa <artension@gmail.com>

	Prohibit adding a member when received join in a mode +a channel.

2008-02-05  Satoshi Nakagawa <artension@gmail.com>

	Changed to clear member list when received mode +a.
	Changed to rebuild member list when received mode -a.

2008-02-05  Satoshi Nakagawa <artension@gmail.com>

	Added note for the encoding setting.

==== LimeChat 0.16 ====

2008-02-03  Satoshi Nakagawa <artension@gmail.com>

	Fixed a number format bug, "0.format_size" caused an exception.

==== LimeChat 0.15.1 ====

2008-02-02  Satoshi Nakagawa <artension@gmail.com>

	Changed to send whois for a pointed member when doubleclicked on the member list.

2008-02-01  Satoshi Nakagawa <artension@gmail.com>

	Changed the report dialog of SACrashReporter.

==== LimeChat 0.15 ====

2008-01-28  Satoshi Nakagawa <artension@gmail.com>

	Turned back the quitting message.

2008-01-28  Satoshi Nakagawa <artension@gmail.com>

	Stopped periodical GC sweeps.

2008-01-28  Satoshi Nakagawa <artension@gmail.com>

	Changed the quitting confirmation message to "Are you sure you want to quit?".

2008-01-28  Satoshi Nakagawa <artension@gmail.com>

	Commented the end of who message, "Members list has been initialized".
	Now comboboxes shows all choices at once.

==== LimeChat 0.14.4 ====

2008-01-26  Satoshi Nakagawa <artension@gmail.com>

	Added servers to the server list.
	Fixed a bug, disconnect menu didn't work while connecting.
	Fixed a bug, cancel reconnect menu should be disabled while connecting for the first time.

2008-01-24  Satoshi Nakagawa <artension@gmail.com>

	Added '%-9n' support for nick format.
